# StreamDeck-Discord

./: .gitignore  CMakeLists.txt  DPP.cmake  DistributionTool  LICENSE  README.md  StreamDeckSDK.cmake  TROUBLESHOOTING.md  sign_target.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
DiscordRPCSDK/: CMakeLists.txt  connection.cpp  connection.h  connection_unix.cpp  connection_win.cpp  rpc_connection.cpp  rpc_connection.h
Sources/: .clang-format  .editorconfig  AwaitablePromise.h  CMakeLists.txt  CallbackTimer.cpp  CallbackTimer.h  DeafenOffAction.h  DeafenOnAction.h  DeafenToggleAction.h  DiscordClient.cpp  DiscordClient.h  DiscordClientMac.cpp  DiscordClientWin.cpp  DiscordESDAction.cpp  DiscordESDAction.h  DiscordESDActionIDs.cpp  DiscordESDActionV2.cpp  DiscordESDActionV2.h  DiscordPayloads.cpp  DiscordPayloads.h  DiscordStreamDeckPlugin.cpp  DiscordStreamDeckPlugin.h  DiscordVoiceSettingsAction.cpp  DiscordVoiceSettingsAction.h  HangupAction.h  JoinVoiceChannelAction.h  MicMuteToggle.h  MyStreamDeckPlugin.cpp  MyStreamDeckPlugin.h  PTTOffAction.h  PTTOnAction.h  PTTToggleAction.h  SelfMuteOffAction.h  SelfMuteOnAction.h  SelfMuteToggleAction.h  json_ext.h  main.cpp  pch.h
Sources/Common/: CMakeLists.txt  EPLJSONUtils.h  ESDBasePlugin.h  ESDCommon.h  ESDCommonMac.h  ESDConnectionManager.cpp  ESDConnectionManager.h  ESDLocalizer.cpp  ESDLocalizer.h  ESDSDKDefines.h  ESDUtilities.h  ESDUtilitiesMac.cpp  ESDUtilitiesWindows.cpp  main.cpp
Sources/Discord/: CMakeLists.txt  connection.h  connection_unix.cpp  connection_win.cpp  rpc_connection.cpp  rpc_connection.h
Sources/DiscordRPCSDK/: CMakeLists.txt  rpc_connection.cpp
Sources/StreamDeckSDK/: CMakeLists.txt  EPLJSONUtils.h  ESDCommonMac.h  ESDCommonWindows.h  ESDSDKDefines.h  main.cpp
Sources/Windows/: DiscordClient_win.cpp  MicMuteToggle.cpp  PolicyConfig.h  com.elgato.cpu.sdPlugin.aps  com.elgato.cpu.sdPlugin.rc  com.elgato.cpu.sdPlugin.vcxproj  com.elgato.cpu.sdPlugin.vcxproj.filters  com.fredemmott.discord.sdplugin.sln  com.fredemmott.micmutetoggle.sdplugin.sln  pch.cpp  pch.h  resource.h
Sources/macOS/: DiscordClient_mac.cpp  pch.h
Sources/macOS/sddiscord.xcodeproj/: project.pbxproj
Sources/macOS/sddiscord.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Sources/macOS/sddiscord.xcodeproj/xcshareddata/xcschemes/: sddiscord.xcscheme
Sources/sdPlugin/: CMakeLists.txt  manifest.json
Sources/sdPlugin/propertyinspector/: common.js  index.html
StreamDeckSDK/: CMakeLists.txt  ESDBasePlugin.h  ESDCommon.h  ESDCommonMac.h  ESDCommonWindows.cpp  ESDCommonWindows.h  ESDConnectionManager.cpp  ESDConnectionManager.h  ESDLocalizer.cpp  ESDLocalizer.h  ESDLogger.cpp  ESDLogger.h  ESDMain.cpp  ESDMain.h  ESDSDKDefines.h  ESDUtilities.h  ESDUtilitiesMac.cpp  ESDUtilitiesWindows.cpp
sdPlugin/: manifest.json.cmake
sdPlugin/discord-ptt.pxd/: metadata.info
sdPlugin/discord-ptt.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
sdPlugin/discord-ptt.pxd/data/: 33AD7FD7-9F78-4617-AF8A-2EC5F70712C0  5C7DA093-5CCA-4B55-95EC-1ED5880368CF  F97A1F7B-898A-4D1A-8C8B-4EF4CC956430  F9C64B1F-2906-4980-A81C-57AF83824AE7  originalImportedContentDocumentInfo
sdPlugin/discord-ptt.pxd/data/selectionForContentTransform/: meta
sdPlugin/discord-ptt.pxd/data/selectionForContentTransform/shapeSelection/: path
sdPlugin/propertyinspector/: index.html
